# SF32LB52

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  bash.exe.stackdump
cmake/: firmware.cmake  libraries.cmake
cmake/toolchains/: clang-arm-none-eabi.cmake
components/bsp/: CMakeLists.txt
components/bsp/lcd/: co5300_oled.c  lcd.c  lcd.h  lcd_bus_qspi.c  lcd_bus_qspi_lcdc.c  lcd_bus_qspi_lcdc.h  lcd_ic_co5300.c  lcd_lcdc_co5300.c  lcd_lcdc_co5300.h  lcd_qspi_bitbang.c  lcd_qspi_bitbang.h  nv3030b_tft.c
components/bsp/tp/: tp_ft6146.c  tp_ft6146.h
components/hal/: CMakeLists.txt  SF32LB52.h  cxx_runtime.cpp  hal.h  hal_pwm.c  hal_pwm.h  hal_uart.c  hal_uart.h
components/hal/lcdc/: bf0_hal.h  bf0_hal_def.h  bf0_hal_lcdc.c  bf0_hal_lcdc.h  hal_lcdc_port.c  register.h  string.h
components/hal/ll/: cache.c  cache.h  clock.c  clock.h  flash.c  flash.h  ll_atim.c  ll_atim.h  ll_gpio.c  ll_gpio.h  ll_nvic.h  ll_pinmux.c  ll_pinmux.h  ll_uart.c  ll_uart.h
components/lithoui/: CMakeLists.txt
components/lithoui/core/: dirty_list.hpp  litho_core.h  painter.hpp  pfb.hpp  region.hpp  tile.hpp
components/lithoui/framework/activity/: activity.cpp  activity.hpp  activity_manager.hpp  activity_stub.cpp
components/lithoui/framework/animation/: animation_manager.hpp  object_animator.hpp  property.hpp  value_animator.hpp  view_property_animator.hpp
components/lithoui/framework/base/: object.hpp
components/lithoui/framework/event/: event_types.hpp
components/lithoui/framework/intent/: bundle.cpp  bundle.hpp  intent.hpp
components/lithoui/framework/view/: view.cpp  view.hpp  view_group.hpp
components/lithoui/framework/widget/: button.hpp  image_view.hpp  text_view.hpp
components/lithoui/framework/window/: window.hpp  window_manager.hpp
components/lithoui/port/: display_adapter.hpp  input_adapter.hpp  tick_adapter.hpp
components/lithoui/port/sf32lb52/: sf32_display.hpp  sf32_input.hpp  sf32_tick.hpp
components/lithoui/tools/: pack_res.py
components/lithoui/ui/hello_litho/: info.txt
components/utils/: CMakeLists.txt  cycle_count.h  segger_rtt.c  segger_rtt.h
components/utils/bitbang/: bb_gpio.h  bb_i2c.c  bb_i2c.h
libc/: CMakeLists.txt
projects/benchmark/: CMakeLists.txt  main.c  project.cmake
projects/bootloader/: CMakeLists.txt  flash_quad_init.c  link.ld  main.c  project.cmake  startup.c  system.c
projects/firmware/: CMakeLists.txt  main.c  project.cmake  startup.c  system.c
projects/firmware-litho/: CMakeLists.txt  cache_init.c  main.cpp  project.cmake
projects/simulator/: CMakeLists.txt  hal_stub.c  main.c  project.cmake
scripts/: build_all.py  flash_all.sh
tools/: gen_ftab.py  serial_monitor.py
